[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/ScrollContainer.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Books.gd" type="Script" id=3]

[node name="Books" type="Control"]
margin_right = 576.0
margin_bottom = 1024.0
script = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 75.0
margin_right = 576.0
margin_bottom = 909.0
scroll_horizontal_enabled = false
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 576.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="ScrollContainer/HBoxContainer"]
margin_right = 284.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_left = 288.0
margin_right = 288.0
margin_bottom = 40.0
custom_constants/separation = 20

[node name="Control" type="Control" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 2

[node name="Control2" type="Control" parent="ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Control2" type="Control" parent="ScrollContainer/HBoxContainer"]
margin_left = 292.0
margin_right = 576.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="HTTPGetBooks" type="HTTPRequest" parent="."]

[node name="HTTPChangeBook" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPGetBooks" to="." method="get_books_response"]
[connection signal="request_completed" from="HTTPChangeBook" to="." method="on_change_book_response"]
